[package]
name = "oneway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "walk-dir"

[[example]]
name = "sender"

[[example]]
name = "receiver"

[features]
default = []
encryption = []

[dev-dependencies]
env_logger = "0.9"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time", "fs", "net", "sync", "macros"] }
log = "0.4"
nom = "7"
tracing = { version = "0.1", features = ["std", "log", "log-always"] }
tracing-log = { version = "0.1", features = ["env_logger", "log-tracer"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
